--- a/index.html
+++ b/index.html
@@ -4,92 +4,23 @@
         <meta charset="utf-8" />
         <title>我的简历</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <link rel="stylesheet" href="./plugins/editormd/css/style.css" />
-        <link rel="stylesheet" href="./plugins/editormd/css/editormd.css" />
+		<link rel="stylesheet" href="./plugins/editormd/css/editormd.preview.css" />
+        <link rel="stylesheet" href="./css/index.css" />
     </head>
     <body>
         <div id="layout" class="container">
-            <div id="test-editormd">
-                <textarea class="J-md-content" style="display:none;"></textarea>
+            <div id="markdown-view">
+                <textarea style="display:none;"></textarea>
             </div>
         </div>
+
+		<div>
+			<a style="display:none" href="javascript:;"  id="btn"  title="回到顶部"></a>
+		</div>
     </body>
 </html>
-<script src="./plugins/editormd/js/jquery.min.js"></script>
-<script src="./plugins/editormd/editormd.min.js"></script>
-<script type="text/javascript">
-    var myEditor;
-    $(function(){
-		var y = getQueryString('y') || undefined;
-        getContent(y, function(){
-            init();
-        });
-    });
-
-	function init(){
-		myEditor = editormd("test-editormd", {
-            width: "98%",
-            height: 960,
-            syncScrolling: "single",
-            path: "./plugins/editormd/lib/",
-			//theme : "dark",
-			//previewTheme : "dark",
-			readOnly: true,
-			taskList:true,
-			//tocm: true,
-			//emoji: true,
-			//watch: false,
-			onload: function(){
-				this.fullscreen();
-				this.previewing();
-				this.resize("100%", 640);
-			}
-        });
-
-        /*
-        // or
-        myEditor = editormd({
-            id      : "test-editormd",
-            width   : "90%",
-            height  : 640,
-            path    : "./plugins/lib/"
-        });
-        */
-		
-		/*
-		$('.preview-btn').bind('click', function(){
-			myEditor.fullscreen();
-			myEditor.previewing();
-		});
-		*/
-	}
-
-	//获取内容
-	function getContent(y, callback){
-		y = y || 2020;
-		$.get('./get_file.php', {y:y}, function(res){
-			if(res.status == 1){
-				if(res.content.length > 0){
-					//$('.J-md-content').val('[TOC]' + res.content);
-					$('.J-md-content').val(res.content);
-					if(typeof callback !='undefined'){
-						callback();
-					}
-				}
-			}else{
-				console.log(res);
-			}
-		});
-	}
-
-	/**
-     * 根据变量名获取匹配值
-     * @param name
-     * @returns {string|undefined}
-     */
-    function getQueryString(name) {
-        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-        var r = window.location.search.substr(1).match(reg);
-        if (r != null) return unescape(r[2]); return undefined;
-    }
-</script>
+<script src="./plugins/jquery.min.js"></script>
+<script src="./plugins/editormd/editormd.js"></script>
+<script src="./plugins/editormd/lib/marked.min.js"></script>
+<script src="./plugins/editormd/lib/prettify.min.js"></script>
+<script src="./js/index.js"></script>
