--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <title>我的简历</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+        <link rel="icon" type="image/png" href="./images/index_v/favicon.png">
 		<link rel="stylesheet" href="./plugins/editormd/css/editormd.preview.css" />
         <link rel="stylesheet" href="./css/index.css" />
     </head>
