--- a/index_v.html
+++ b/index_v.html
@@ -49,7 +49,7 @@
                     </a>
                 </li>
                 <li title="简历">
-                    <a href="http://www.zhubingx.com/" target="_blank">
+                    <a href="http://www.zhubingx.com/index.html" target="_blank">
                         <i class="ti-dribbble font-14px gray-icon"></i>
                     </a>
                 </li>
