--- a/index_v.html
+++ b/index_v.html
@@ -53,10 +53,24 @@
                         <i class="ti-dribbble font-14px gray-icon"></i>
                     </a>
                 </li>
+                <li title="查看二维码" class="resume-qrcode-btn">
+                    <a href="javascript:void(0);" target="_blank">
+                        <i class="ti-share font-14px gray-icon"></i>
+                    </a>
+                </li>
             </ul>
             <p>
                 <small>© 2020 zhubing.</small>
             </p>
+
+            <div class="resume-qrcode" style="display: none">
+                <div class="qrcode-img">
+                    <img src="./images/qrcode-a.png" />
+                </div>
+                <div class="qrcode-text">
+                    神奇的二维码
+                </div>
+            </div>
         </div>
     </aside>
 
@@ -341,16 +355,19 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
+                            <ol class="work-experience-content">
+                                <li>善于思考问题，专业基础知识扎实。在学习中注重理论和实践的结合</li>
+                                <li>对互联网编程有着浓厚的兴趣，具有较强的学习能力，适应能力强，可以迅速吸收和运用技能知识和业务场景</li>
+                                <li>在之前的的工作中也是认真负责，能够很好的跟客户交流沟通并且了解、执行到位客户的需求</li>
+                                <li>并且也能够设身处地的处理好用户的问题，这点在之前的工作中都收到了领导、客户的肯定和用户的认可</li>
+                                <li>有良好的工作习惯，每天会生成工作日计划和完成情况记录、周总结，以及需求分析记录笔记</li>
+                            </ol>
+                        </div>
                         <div class="clients">
                             <img src="./images/index_v/c4.png" class="img-fluid" alt="">
                         </div>
-                        <ol>
-                            <li>善于思考问题，专业基础知识扎实。在学习中注重理论和实践的结合</li>
-                            <li>对互联网编程有着浓厚的兴趣，具有较强的学习能力，适应能力强，可以迅速吸收和运用技能知识和业务场景</li>
-                            <li>在之前的的工作中也是认真负责，能够很好的跟客户交流沟通并且了解、执行到位客户的需求</li>
-                            <li>并且也能够设身处地的处理好用户的问题，这点在之前的工作中都收到了领导、客户的肯定和用户的认可</li>
-                            <li>有良好的工作习惯，每天会生成工作日计划和完成情况记录、周总结，以及需求分析记录笔记</li>
-                        </ol>
                     </div>
                 </div>
             </div>
@@ -369,40 +386,49 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                        <div>
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>php</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>熟悉php语法，以及常用内置系统方法</li>
                                     <li>熟悉oop面向对象编程思想，以及常用开发模式(单例、工厂、注册树等)</li>
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>mysql</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>熟悉mysql语法，常用数据类型、常用索引、事务处理</li>
                                     <li>可根据具体业务 完成 适用于相关业务的数据结构，以及相关数据结构的优化</li>
                                 </ol>
                             </div>
                         </div>
 
-                        <div style="display: none">
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card" style="display: none">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>apache/nginx</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>apache 只在测试环境中使用过，上线的项目均使用的是nginx作为web服务器</li>
                                     <li>目前未接触过较多的nginx优化相关配置，默认配置已可支撑相关业务运行</li>
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>php开发框架</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>
                                         <div>精通thinkphp框架</div>
                                         <div>
@@ -421,19 +447,25 @@
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>linux/shell</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>熟悉linux的常用命令，可编写shell脚本</li>
                                     <li>linux常用命令 如 文件操作、文件权限控制、内存和cpu使用情况分析、软件安装、更新(含源码操作)等</li>
                                     <li>目前市面上有ui界面用于管理相关服务器 所以使用命令操作较少，频繁使用的命令 会编写成脚本 执行</li>
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>开发工具</div>
                                 <ol>
@@ -442,11 +474,14 @@
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div style="display: none">
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card" style="display: none">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>swoole、redis、mongodb</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>
                                         <div>swoole</div>
                                         <ol>
@@ -470,11 +505,14 @@
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>前端框架和组件</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>熟悉jquery、vuejs 、(vant，element)等前端框架和组件</li>
                                     <li>在之前的工作中，也会写一些前端的代码，所以对前端的技能也有所了解和使用</li>
                                     <li>可独立完成基于 html css js(jquery) 的网站开发</li>
@@ -482,22 +520,28 @@
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
-                                <div>php工程师技能心得</div>
-                                <ol>
+                                <div>php心得</div>
+                                <ol class="work-experience-content">
                                     <li>作为一个php工程师，在工作中其实不会用到较底层的技能实现，更多的是根据业务完成数据结构设计(优化)、接口编写、代码优化、数据安全性校验、性能优化等</li>
                                     <li>较底层的实现，由于不会经常做调整，更有效的使用协程工作，可交由 c、java、golang等编译型语言处理，性能会更高( -这几门语言我都不会- )</li>
                                     <li>在遇到 较难解决的技能问题，可先上网查询相关资料，现学现用</li>
                                 </ol>
                             </div>
                         </div>
+                    </div>
 
-                        <div style="display: none">
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="lonon-quote-card" style="display: none">
+                            <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>python/golang</div>
-                                <ol>
+                                <ol class="work-experience-content">
                                     <li>自学过 python，用python写过一些爬虫程序，工作中没有应用场景，没有深入学习</li>
                                     <li>golang 目前还在学习计划列表中</li>
                                 </ol>
