--- a/index_v.html
+++ b/index_v.html
@@ -355,6 +355,11 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+                        <div class="clients">
+                            <img src="./images/index_v/c4.png" class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
                         <div class="lonon-quote-card">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <ol class="work-experience-content">
@@ -364,9 +369,6 @@
                                 <li>并且也能够设身处地的处理好用户的问题，这点在之前的工作中都收到了领导、客户的肯定和用户的认可</li>
                                 <li>有良好的工作习惯，每天会生成工作日计划和完成情况记录、周总结，以及需求分析记录笔记</li>
                             </ol>
-                        </div>
-                        <div class="clients">
-                            <img src="./images/index_v/c4.png" class="img-fluid" alt="">
                         </div>
                     </div>
                 </div>
