--- a/index_v.html
+++ b/index_v.html
@@ -246,7 +246,7 @@
                             <h5>
                                 <strong>PHP工程师</strong>
                             </h5>
-                            <p class="occupation">负责数据结构设计、接口开发、管理后台开发</p>
+                            <p class="occupation">负责数据结构设计、接口、管理后台开发</p>
                         </div>
                     </div>
 
@@ -265,7 +265,7 @@
                             <h5>
                                 <strong>PHP工程师</strong>
                             </h5>
-                            <p class="occupation">负责数据结构设计、接口开发、管理后台开发</p>
+                            <p class="occupation">负责数据结构设计、接口、管理后台开发</p>
                         </div>
                     </div>
 
@@ -284,7 +284,7 @@
                             <h5>
                                 <strong>PHP工程师</strong>
                             </h5>
-                            <p class="occupation">负责数据结构设计、接口开发、管理后台开发</p>
+                            <p class="occupation">负责数据结构设计、接口、管理后台开发</p>
                         </div>
                     </div>
 
@@ -303,7 +303,7 @@
                             <h5>
                                 <strong>PHP工程师</strong>
                             </h5>
-                            <p class="occupation">负责数据结构设计、接口开发、管理后台开发</p>
+                            <p class="occupation">负责数据结构设计、接口、管理后台开发</p>
                         </div>
                     </div>
                 </div>
@@ -446,14 +446,14 @@
                                 <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                                 <div class="bar-title">
                                     <div>php开发框架</div>
-                                    <ol class="work-experience-content">
-                                        <li>
+                                    <div class="work-experience-content">
+                                        <div>
                                             <div>精通thinkphp框架</div>
-                                            <div>
-                                                截止2019.08，所有项目均在thinkphp(3.1、3.2、5.1)上做的二开
-                                            </div>
-                                        </li>
-                                        <li>
+                                            <ol>
+                                                <li>截止2019.08，所有项目均在thinkphp(3.1、3.2、5.1)上做的二开</li>
+                                            </ol>
+                                        </div>
+                                        <div>
                                             <div>精通laravel框架</div>
                                             <ol>
                                                 <li>在土流网工作期间 使用 laravel框架(5.2、5.8) 做相关业务支持，(两天框架和项目熟悉上手)</li>
@@ -462,8 +462,8 @@
                                                 </li>
                                                 <li>熟悉框架容器和注入实现</li>
                                             </ol>
-                                        </li>
-                                    </ol>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
