--- a/index_v.html
+++ b/index_v.html
@@ -107,7 +107,18 @@
                         <p>php工程师 · 土流集团</p>
                         <p>男 ︳ 27岁 ︳大专 ︳ 4年php开发工作经验 ︳ 长沙</p>
                         <p>联系方式: 13467898157(张家界) 19173160216(长沙)</p>
+                        <p>期望福利：五险一金，双休，可接受常规加班</p>
                         <p>目前在职 面试双方满意后，可在一个月内到岗(合同限制)</p>
+
+                        <div>
+                            <div>个人情况说明：</div>
+                            <div>
+                                <p></p>
+                                <p>面试，不做面试题，不回答基础理论知识，若有需求，可结合业务实现</p>
+                                <p>不是很喜欢(不擅长)说，会的都写出来了</p>
+                            </div>
+                        </div>
+
                         <div class="cardvisit">
                             <h3>朱 兵</h3>
                             <span>PHP 开发工程师</span>
