--- a/index_v.html
+++ b/index_v.html
@@ -468,10 +468,7 @@
                                             <div>精通laravel框架</div>
                                             <ol>
                                                 <li>在土流网工作期间 使用 laravel框架(5.2、5.8) 做相关业务支持，(两天框架和项目熟悉上手)</li>
-                                                <li>
-                                                    目前用到了基础功能(路由、中间件、orm)、通知(极光推送)、事件监听、定时任务、队列任务、缓存、单元测试、数据填充迁移、api资源、viewComposer(视图组合器)、支付扩展等等
-                                                </li>
-                                                <li>熟悉框架容器和注入实现</li>
+                                                <li>做过一些典型功能：如 极光推送、视图组合器(viewComposer)、支付、消息队列</li>
                                             </ol>
                                         </div>
                                     </div>
