--- a/index_v.html
+++ b/index_v.html
@@ -250,7 +250,7 @@
                                 <ol class="work-experience-content">
                                     <li>项目介绍：甲方高度定制类商城项目，根据甲方的具体需求完成项目研发</li>
                                     <li>核心功能点：会员系统、商品、订单、团购、秒杀</li>
-                                    <li>项目运行环境：linux、阿里云服务器与数据库、七牛云CDN加速</li>
+                                    <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
                                     <li>项目开发工具：phpstorm、mysql workbench、svn、editplus、flashfxp</li>
                                 </ol>
                             </div>
@@ -269,7 +269,7 @@
                                 <ol class="work-experience-content">
                                     <li>项目介绍：负责长沙移动等7个地市移动微信公众号的h5活动与运维</li>
                                     <li>核心功能点：会员系统、金币（积分）系统、物料宣传管理系统、宽带预约系统、每月定期的h5活动开发等</li>
-                                    <li>项目运行环境：linux、nginx+mysql 、阿里云服务器与数据库、七牛云CDN加速</li>
+                                    <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
                                     <li>项目开发工具：phpstorm、mysql workbench、svn、editplus、flashfxp</li>
                                 </ol>
                             </div>
@@ -288,7 +288,7 @@
                                 <ol class="work-experience-content">
                                     <li>项目介绍：一款围绕商家做优惠券分发的工具</li>
                                     <li>核心功能点：商家管理，优惠券管理，活动管理，多层分享逻辑；</li>
-                                    <li>项目运行环境：linux、nginx+mysql 、阿里云服务器与数据库、七牛云CDN加速</li>
+                                    <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
                                     <li>项目开发工具：phpstorm、mysql workbench、svn、editplus、flashfxp</li>
                                 </ol>
                             </div>
@@ -307,7 +307,7 @@
                                 <ol class="work-experience-content">
                                     <li>项目介绍：一款基于微信的推广营销管理工具，支持PC和手机端 多用户管理，企业微信员工同步</li>
                                     <li>核心功能点：员工管理、活动管理、公众号管理、营销插件管理等</li>
-                                    <li>项目运行环境：linux、nginx+mysql 、阿里云服务器与数据库、七牛云CDN加速</li>
+                                    <li>项目运行环境：nginx、ecs|rds、静态资源七牛云CDN加速</li>
                                     <li>项目开发工具：phpstorm、mysql workbench、svn、editplus、flashfxp</li>
                                 </ol>
                             </div>
