--- a/index_v.html
+++ b/index_v.html
@@ -110,7 +110,7 @@
                         <p>大型上线项目后端、商城网站、高并发在线h5活动后端、服务器管理经验</p>
                         <p>php工程师 · 土流集团</p>
                         <p>男 ︳ 27岁 ︳大专 ︳ 4年php开发工作经验 ︳ 长沙</p>
-                        <p>联系方式: 13467898157(张家界) 19173160216(长沙)</p>
+                        <p>联系方式: <a href="tel:13467898157">13467898157(张家界)</a> <a href="tel:19173160216">19173160216(长沙)</a></p>
                         <p>期望福利：五险一金，双休，可接受常规加班</p>
                         <p>目前在职 面试双方满意后，可在一个月内到岗(合同限制)</p>
 
@@ -618,7 +618,7 @@
                     "bdComment": '你有需求，我有技术，我们一起向前走。',
                     //"bdMini" : "2",//按钮排列2行
                     //"bdMiniList" : false,//按钮的数组
-                    "bdPic": "http://linweb.applinzi.com/public/img/weixin.png",//分享的图像地址
+                    "bdPic": "./images/goto-top.png",//分享的图像地址
                     "bdStyle": "0",//按钮样式
                     "bdSize": "32",//按钮大小
                     "bdUrl": window.location.href,//分享的地址
@@ -631,5 +631,8 @@
         }
     })
 </script>
+
+<script type="text/javascript" src="https://s4.cnzz.com/z_stat.php?id=1277910083&web_id=1277910083"></script>
+
 </body>
 </html>
