--- a/index_v.html
+++ b/index_v.html
@@ -628,7 +628,34 @@
             };
 
             with (document) 0[(getElementsByTagName('head')[0] || body).appendChild(createElement('script')).src = 'http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion=' + ~(-new Date() / 36e5)];
+
+            //提示
+            $("[data-toggle='popover']").on({
+                mouseenter: function(){
+                    let index = $('.toggle-popover li').index(this);
+                    $("[data-toggle='popover']").eq(index).popover('show');
+                },
+                mouseleave: function(){
+                    let index = $('.toggle-popover li').index(this);
+                    $("[data-toggle='popover']").eq(index).popover('hide');
+                }
+            });
+            $("[data-toggle='popover']").eq(0).popover('show');
+            setTimeout(function(){
+                $("[data-toggle='popover']").eq(0).popover('hide');
+            }, 2000);
         }
+
+        //菜单切换
+        $('#lonon-main-menu').on('click', 'li', function () {
+            $(this).addClass("lonon-active").siblings().removeClass("lonon-active")
+        })
+
+        //显示二维码
+        $('.resume-qrcode-btn').on('click', function(){
+            $('.resume-qrcode').toggle(1000);
+            $('.share-box').toggle(1000);
+        })
     })
 </script>
 
