--- a/index_v.html
+++ b/index_v.html
@@ -112,7 +112,7 @@
                         <p>男 ︳ 27岁 ︳大专 ︳ 4年php开发工作经验 ︳ 长沙</p>
                         <p>联系方式: <a href="tel:13467898157">13467898157(张家界)</a> <a href="tel:19173160216">19173160216(长沙)</a></p>
                         <p>期望福利：五险一金，双休，可接受常规加班</p>
-                        <p>目前在职 面试双方满意后，可在一个月内到岗(合同限制)</p>
+                        <p>目前在职 面试双方满意后，可在一个月内到岗</p>
 
                         <div>
                             <div>个人情况说明：</div>
@@ -137,7 +137,7 @@
                             </p>
                             <p>
                                 <i class="ti-location-pin"></i>
-                                湖南长沙芙蓉区 锦泰广场附近
+                                湖南长沙雨花区三重星都心小区
                             </p>
                         </div>
                     </div>
@@ -396,8 +396,8 @@
                             <ol class="work-experience-content">
                                 <li>善于思考问题，专业基础知识扎实。在学习中注重理论和实践的结合</li>
                                 <li>对互联网编程有着浓厚的兴趣，具有较强的学习能力，适应能力强，可以迅速吸收和运用技能知识和业务场景</li>
-                                <li>在之前的的工作中也是认真负责，能够很好的跟客户交流沟通并且了解、执行到位客户的需求</li>
-                                <li>并且也能够设身处地的处理好用户的问题，这点在之前的工作中都收到了领导、客户的肯定和用户的认可</li>
+                                <li style="display: none;">在之前的的工作中也是认真负责，能够很好的跟客户交流沟通并且了解、执行到位客户的需求</li>
+                                <li style="display: none;">并且也能够设身处地的处理好用户的问题，这点在之前的工作中都收到了领导、客户的肯定和用户的认可</li>
                                 <li>有良好的工作习惯，每天会生成工作日计划和完成情况记录、周总结，以及需求分析记录笔记</li>
                             </ol>
                         </div>
@@ -432,7 +432,7 @@
                     </div>
 
                     <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                        <div class="lonon-quote-card">
+                        <div class="lonon-quote-card" style="display: none;">
                             <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                             <div class="bar-title">
                                 <div>mysql</div>
@@ -481,7 +481,7 @@
                         </div>
 
                         <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                            <div class="lonon-quote-card">
+                            <div class="lonon-quote-card" style="display: none;">
                                 <img src="./images/index_v/quote.png" alt="" class="lonon-quote-2">
                                 <div class="bar-title">
                                     <div>linux/shell</div>
@@ -562,9 +562,9 @@
                                     <ol class="work-experience-content">
                                         <li>作为一个php工程师，在工作中其实不会用到较底层的技能实现，更多的是根据业务完成数据结构设计(优化)、接口编写、代码优化、数据安全性校验、性能优化等
                                         </li>
-                                        <li>较底层的实现，由于不会经常做调整，更有效的使用协程工作，可交由 c、java、golang等编译型语言处理，性能会更高( -这几门语言我都不会- )
+                                        <li style="display: none;">较底层的实现，由于不会经常做调整，更有效的使用协程工作，可交由 c、java、golang等编译型语言处理，性能会更高( -这几门语言我都不会- )
                                         </li>
-                                        <li>在遇到 较难解决的技能问题，可先上网查询相关资料，现学现用</li>
+                                        <li style="display: none;">在遇到 较难解决的技能问题，可先上网查询相关资料，现学现用</li>
                                     </ol>
                                 </div>
                             </div>
